--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="./main.css">
     </head>
     <body>
-        <h3>123</h3>
+        <h3>hi</h3>
+        <script src="./main.js"></script>
     </body>
 </html>
