--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="./main.css">
     </head>
     <body>
-        <h3>hi</h3>
+        <div id="dog-breeds"></div>
+        <div id="animal"></div>
+        <div id="band-list"></div>
         <script src="./main.js"></script>
     </body>
 </html>
